<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/SettingsActivityTheme"
        android:background="#ffe0b2"
        tools:showIn="@layout/activity_about"
        android:orientation="vertical"
        android:padding="@dimen/idle_padding"
        tools:context="com.example.lenovo.earthquakesampleappwithinternet.AboutActivity">

    <TextView android:layout_width="wrap_content"
              android:id="@+id/spanned_first_para"
              android:text="@string/activity_about_content_first_para"
              android:layout_height="wrap_content"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/activity_about_content_second_para"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/idle_margin"
              android:textColor="@color/colorAccent"
              android:id="@+id/activity_about_content_second_para_usgs_link"
              android:text="@string/activity_about_content_second_para_link"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="18dp"
              android:text="@string/activity_about_content_features_para"
              android:layout_marginBottom="@dimen/idle_margin"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_1"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_2"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_3"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_4"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_5"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_6"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_feature_line_7"
    />
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#9e9e9e"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_marginTop="@dimen/idle_padding"
              android:layout_height="wrap_content"
              android:text="@string/about_activity_content_credit"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_marginTop="@dimen/idle_padding"
              android:layout_height="wrap_content"
              android:text="@string/about_activity_content_version_bold"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about_activity_content_copyright"
    />

    <!--<LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
    android:orientation="horizontal">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about_activity_content_icon_author"
    />
        <TextView android:layout_width="wrap_content"
                  android:textColor="@color/colorAccent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="4dp"
                  android:id="@+id/freepik_link"
                  android:text="@string/about_activity_content_icon_author_name"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/idle_margin"
    android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="from"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="4dp"
                  android:textColor="@color/colorAccent"
                  android:id="@+id/flaticon_link"
                  android:text="@string/about_activity_content_flaticon_link"
        />
    </LinearLayout>-->
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#9e9e9e"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/idle_padding"
              android:text="@string/about_activity_map_data_info"
              android:layout_marginBottom="@dimen/idle_margin"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/idle_margin"
              android:text="@string/about_activity_content_final_note"
    />
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#9e9e9e"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/idle_padding"
                  android:paddingBottom="24dp"
    android:orientation="horizontal">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="2dp"
                   android:layout_marginRight="6dp"
                   android:src="@drawable/ic_info_outline_black_24dp" android:layout_marginEnd="6dp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/idle_padding"
              android:text="@string/about_activity_content_informational_warning"
    />
    </LinearLayout>
</LinearLayout>
</ScrollView>
